--- a/Task1_Word_Embeddings.ipynb
+++ b/Task1_Word_Embeddings.ipynb
@@ -48,9 +48,10 @@
       "source": [
         "# Imports\r\n",
         "import pandas as pd\r\n",
-        "import regex"
+        "import regex\r\n",
+        "import numpy as np"
       ],
-      "execution_count": 2,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -70,7 +71,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "XtI7DJ-0-AOP",
-        "outputId": "113fe49a-d6ea-445b-8468-cd40084ae21b",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -88,7 +88,8 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 73
-        }
+        },
+        "outputId": "8b086052-e01c-42f7-c37f-01f6839661ab"
       },
       "source": [
         "#TODO: implement!\n",
@@ -96,16 +97,16 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-a7dceb8f-76ac-43a1-9afb-113392709957\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-c36d1170-4bcf-4ee1-b8fd-3b0a91222b2a\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-a7dceb8f-76ac-43a1-9afb-113392709957\">\n",
+              "     <output id=\"result-c36d1170-4bcf-4ee1-b8fd-3b0a91222b2a\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -131,19 +132,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NWKoXKPltCp4",
-        "outputId": "5c8ba4a9-6a05-4cfe-98e9-febebd840cc1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 402
-        }
+        },
+        "id": "NWKoXKPltCp4",
+        "outputId": "393a8e89-630b-4238-eb50-ec381837d295"
       },
       "source": [
         "data = pd.read_csv(\"hindi_hatespeech.tsv\", sep=\"\\t\")          #loading data into pandas dataframe\r\n",
         "development_set = data.sample(n=100, random_state=1)\r\n",
         "development_set"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +289,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -310,12 +311,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zg51i6cvI4Kk",
-        "outputId": "12ed0a98-dc59-4bb2-da47-1061289ab044",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 402
-        }
+        },
+        "id": "zg51i6cvI4Kk",
+        "outputId": "d137d2dc-ff8c-4e8f-ce37-608f1dea7c84"
       },
       "source": [
         "#s = '145. !! #hsdfg संस्कृत महाविद्यालय । @asdsg https://m.facebook.com/story.php?story_fbid=443161759855093&id=464554060349094 asd'\r\n",
@@ -327,7 +328,7 @@
         "development_set['text'] = development_set['text'].apply(lambda x: regex.sub(r'(@[\\w]*)*[\\d\\p{Punct}*]*(https[^\\s]*)*', '', x))        #removing usernames, numbers, punctuations and links\r\n",
         "development_set"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +473,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -480,7 +481,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "CHcNeyKi-AOQ",
-        "outputId": "7c670af3-56da-4d37-e486-b0d771cbc53d",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -498,22 +498,23 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 73
-        }
+        },
+        "outputId": "1632afe7-ab0f-4203-f257-a64ed1c1aef6"
       },
       "source": [
         "#TODO: implement!\r\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-c32649fd-06e2-4c14-bd3c-f58820a5c8d9\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-c3285214-d338-4d85-bead-7971b2c6296b\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-c32649fd-06e2-4c14-bd3c-f58820a5c8d9\">\n",
+              "     <output id=\"result-c3285214-d338-4d85-bead-7971b2c6296b\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -539,11 +540,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mz53AdUF1XE5",
-        "outputId": "c39f24f8-59ed-4ac5-bdc8-e7016fe55b68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mz53AdUF1XE5",
+        "outputId": "f288b20c-a3b5-443b-9d27-4afbda9c2ecf"
       },
       "source": [
         "stop_words = pd.read_csv(\"stopwords-hi.txt\", header=None)           #storing stopwords in a dataframe\r\n",
@@ -552,7 +553,7 @@
         "text_wo_stopwords = text_split.apply(lambda x: [item for item in x if item not in stop_words[:][0].tolist()]) \r\n",
         "text_wo_stopwords"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,7 +583,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -602,14 +603,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VpoGmTKx-AOQ"
+        "id": "VpoGmTKx-AOQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ef4aafe4-7274-408f-f243-82833ceec50f"
       },
       "source": [
         "#TODO: implement!\n",
-        "V = "
+        "V = []\n",
+        "for x in text_wo_stopwords:\n",
+        "  for item in x:\n",
+        "    V.append(item)\n",
+        "#V.append(text_wo_stopwords.apply(lambda x: [item for item in x]))\n",
+        "len(V)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1720"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -623,15 +646,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yqPNw6IT-AOQ"
+        "id": "yqPNw6IT-AOQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0cfaf9a4-a975-497e-c429-16dcf38304bd"
       },
       "source": [
         "#TODO: implement!\n",
         "def word_to_one_hot(word):\n",
-        "  pass"
+        "  hot_vector = []\n",
+        "  for x in V:\n",
+        "    if x==word:\n",
+        "      hot_vector.append(1)\n",
+        "    else:\n",
+        "      hot_vector.append(0) \n",
+        "  return np.array(hot_vector)\n",
+        "\n",
+        "print(len(word_to_one_hot('तेजस्वी')))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1720\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
